Fix child field hyphen not being aligned properly in Chrome

--- a/assets/css/scss/admin-tooltips.scss
+++ b/assets/css/scss/admin-tooltips.scss
@@ -193,7 +193,7 @@ body .ui-tooltip {
 	}
 
 	// Indent the child fields a bit.
-	[data-layout="list"] .gv-child-field .gv-field-label {
+	[data-layout="list"] .gv-child-field .gv-field-label .gv-field-label-text-container {
 		&:before {
 			content: '- ';
 		}
